--- a/src/scss/partials/_post-content.scss
+++ b/src/scss/partials/_post-content.scss
@@ -1,11 +1,3 @@
-.post-content {
-
-	> h1, > h2, > h3, > h4, > h5, > h6 {
-		margin-top: 4rem;
-	}
-
-}
-
 .alignwide {
 	margin-left  : calc( -100vw / 2 + 100% / 2 );
 	margin-right : calc( -100vw / 2 + 100% / 2 );
